--- a/src/fr/bg/main/vues/Ressources/TabPanRessources.fxml
+++ b/src/fr/bg/main/vues/Ressources/TabPanRessources.fxml
@@ -31,7 +31,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="parent" prefHeight="714.0" prefWidth="1105.0" styleClass="parent" stylesheets="@../../assets/styles/dashbord.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.bg.main.controleurs.utilisateurs.TabPanUtilisateursController">
+<AnchorPane fx:id="parent" prefHeight="714.0" prefWidth="1105.0" styleClass="parent" stylesheets="@../../assets/styles/dashbord.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.bg.main.controleurs.Ressources.TabPanRessourcesController">
    <children>
       <VBox fx:id="gestionVBox1" layoutY="5.0" prefHeight="27.0" prefWidth="1034.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
