--- a/src/fr/bg/main/vues/Stock/TabPanStock.fxml
+++ b/src/fr/bg/main/vues/Stock/TabPanStock.fxml
@@ -2,6 +2,7 @@
 
 <?import com.sibvisions.rad.ui.javafx.ext.FXButton?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -230,7 +231,10 @@
                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="468.0" prefWidth="671.0">
                                        <children>
                                           <TextField fx:id="adminTFSearch" layoutX="548.0" layoutY="14.0" promptText="Article ID" AnchorPane.rightAnchor="127.0" />
-                                          <Button layoutX="721.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" style="-fx-background-color: #09B28C;" text="Search" textFill="WHITE" AnchorPane.rightAnchor="23.0" />
+                                          <Button layoutX="721.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" style="-fx-background-color: #09B28C;" text="Search" textFill="WHITE" AnchorPane.rightAnchor="23.0">
+                                             <cursor>
+                                                <Cursor fx:constant="HAND" />
+                                             </cursor></Button>
                                           <Button layoutX="46.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" style="-fx-background-color: #09B28C;" text="View" textFill="WHITE" AnchorPane.leftAnchor="46.0" />
                                           <Button layoutX="146.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" style="-fx-background-color: #09B28C;" text="Refresh" textFill="WHITE" AnchorPane.leftAnchor="146.0" />
                                           <TableView fx:id="adminTableView" layoutX="2.0" layoutY="55.0" prefHeight="533.0" prefWidth="822.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="55.0">
@@ -294,15 +298,15 @@
                <content>
                   <AnchorPane>
                      <children>
-                        <TableView fx:id="studentAllCourseTableView" layoutX="8.0" layoutY="41.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="194.0" prefWidth="1091.0" AnchorPane.bottomAnchor="350.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="35.0">
+                        <TableView fx:id="studentAllCourseTableView" layoutX="8.0" layoutY="41.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="291.0" prefWidth="1079.0" AnchorPane.bottomAnchor="256.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="35.0">
                            <columns>
-                              <TableColumn fx:id="studentACourseColumnCode" prefWidth="42.0" text="Id article" />
-                              <TableColumn fx:id="studentACourseColumnTitle" prefWidth="141.0" text="Nom" />
-                              <TableColumn fx:id="studentACourseColumnCredit" prefWidth="108.0" text="Libelle" />
-                              <TableColumn fx:id="studentACourseColumnSec" prefWidth="114.0" text="Référence" />
-                              <TableColumn fx:id="studentACourseColumnSec1" minWidth="0.0" prefWidth="68.0" text="Rayon" />
-                              <TableColumn fx:id="studentACourseColumnSec2" minWidth="0.0" prefWidth="137.0" text="Fournisseur" />
-                              <TableColumn fx:id="studentACourseColumnSec22" prefWidth="104.0" text="Qte dans le stock" />
+                              <TableColumn fx:id="studentACourseColumnCode" prefWidth="128.0" text="ID article" />
+                              <TableColumn fx:id="studentACourseColumnTitle" prefWidth="102.0" text="Nom" />
+                              <TableColumn fx:id="studentACourseColumnCredit" prefWidth="89.0" text="Libelle" />
+                              <TableColumn fx:id="studentACourseColumnSec" prefWidth="110.0" text="Référence" />
+                              <TableColumn fx:id="studentACourseColumnSec1" minWidth="0.0" prefWidth="118.0" text="Rayon" />
+                              <TableColumn fx:id="studentACourseColumnSec2" minWidth="0.0" prefWidth="115.0" text="Fournisseur" />
+                              <TableColumn fx:id="studentACourseColumnSec22" prefWidth="135.0" text="Qte dans le stock" />
                            </columns>
                         </TableView>
                         <Text fill="#0091ea" layoutX="391.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Liste des produits" AnchorPane.rightAnchor="529.849609375">
@@ -317,12 +321,15 @@
                         </Text>
                         <TextField fx:id="registrationTFSearch" layoutX="607.0" layoutY="6.0" promptText="Article ID" AnchorPane.rightAnchor="349.0" />
                         <Button layoutX="770.0" layoutY="6.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="Search" AnchorPane.rightAnchor="269.0" />
-                        <TableView layoutX="12.0" layoutY="306.0" prefHeight="211.0" prefWidth="459.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0">
+                        <TableView layoutX="12.0" layoutY="306.0" prefHeight="211.0" prefWidth="1077.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="6.0">
                           <columns>
                               <TableColumn prefWidth="125.0" text="ID article" />
-                            <TableColumn prefWidth="125.0" text="Nom du produit" />
-                            <TableColumn prefWidth="128.0" text="Fournisseur" />
-                              <TableColumn prefWidth="78.0" text="Qte" />
+                            <TableColumn prefWidth="125.0" text="Nom " />
+                            <TableColumn prefWidth="128.0" text="Libelle" />
+                              <TableColumn prefWidth="78.0" text="Référence" />
+                              <TableColumn prefWidth="78.0" text="Rayon" />
+                              <TableColumn prefWidth="78.0" text="Fournisseur" />
+                              <TableColumn prefWidth="78.0" text="Qte dans le stock" />
                           </columns>
                         </TableView>
                         <Text layoutX="14.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" />
