nettoyage de code

--- a/src/fr/bg/main/vues/Parc/TabPanParc.fxml
+++ b/src/fr/bg/main/vues/Parc/TabPanParc.fxml
@@ -472,7 +472,7 @@
                                                 </ImageView>
                                              </graphic>
                                           </Button>
-                                          <ImageView fx:id="imageView11" fitHeight="35.0" fitWidth="41.0" layoutX="238.0" layoutY="10.0" pickOnBounds="true">
+                                          <ImageView  fitHeight="35.0" fitWidth="41.0" layoutX="238.0" layoutY="10.0" pickOnBounds="true">
                                              <image>
                                                 <Image url="@../../assets/images/icons8_Microsoft_Excel_48px.png" />
                                              </image>
