--- a/src/fr/bg/main/vues/Parc/TabPanParc.fxml
+++ b/src/fr/bg/main/vues/Parc/TabPanParc.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.sibvisions.rad.ui.javafx.ext.FXButton?>
+<?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
@@ -111,7 +112,7 @@
         </VBox>
       <TabPane layoutY="71.0" prefHeight="539.0" prefWidth="1034.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="103.0">
          <tabs>
-            <Tab text="Equipement">
+            <Tab text="Equipements">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -221,7 +222,7 @@
                                                 <TextField fx:id="equipementTFTypeReference" disable="true" GridPane.columnIndex="1" />
                                                 <TextField fx:id="equipementTFTypeLibelle" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                                 <TextField fx:id="EquipementTFTypeDDV" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                                <JFXButton fx:id="EquipementBtnTypeImage" onAction="#imageChooser" text=" " GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                                <JFXButton fx:id="EquipementBtnTypeImage" onAction="#imageChooser" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                                    <graphic>
                                                       <ImageView fx:id="EquipementImageViewImage" fitHeight="133.0" fitWidth="152.0" pickOnBounds="true">
                                                          <image>
@@ -352,16 +353,16 @@
                                  <items>
                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                        <children>
-                                          <Button fx:id="TypesAddNewButtonClick1" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#setEquipementAddNewButtonClick" prefHeight="25.0" prefWidth="80.0" style="-fx-background-color: #09B28C;" text="AddNew" textFill="WHITE" AnchorPane.leftAnchor="14.0" />
+                                          <Button fx:id="equipementAddNewButtonClick1" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#setEquipementAddNewButtonClick" prefHeight="25.0" prefWidth="80.0" style="-fx-background-color: #09B28C;" text="AddNew" textFill="WHITE" AnchorPane.leftAnchor="14.0" />
                                           <Button fx:id="equipementEditButtonClick1" layoutX="134.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" style="-fx-background-color: #09B28C;" text="Edit" textFill="WHITE" />
                                           <Button fx:id="equipementDeleteButtonClick1" alignment="CENTER" layoutX="254.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" style="-fx-background-color: #FF3F3C; -fx-text-fill: white;" text="Delete" />
-                                          <Text fill="#0091ea" layoutX="26.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Détails d'enregistrement d'un Type " wrappingWidth="351.2890625" AnchorPane.bottomAnchor="504.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="47.0">
+                                          <Text fill="#0091ea" layoutX="26.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Détails d'enregistrement du Type" wrappingWidth="351.2890625" AnchorPane.bottomAnchor="504.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="47.0">
                                              <font>
                                                 <Font size="18.0" />
                                              </font>
                                           </Text>
                                           <Separator layoutX="13.0" layoutY="78.0" prefHeight="4.0" prefWidth="322.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="78.0" />
-                                          <GridPane layoutX="14.0" layoutY="91.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="325.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="41.0" AnchorPane.topAnchor="91.0">
+                                          <GridPane layoutX="12.0" layoutY="124.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="325.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="43.0" AnchorPane.topAnchor="124.0">
                                              <columnConstraints>
                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -411,12 +412,11 @@
                                                       <Font size="14.0" />
                                                    </font>
                                                 </Text>
-                                                <ChoiceBox fx:id="equipementCBType1" value="Block" disable="true" prefHeight="25.0" prefWidth="163.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                                <ChoiceBox fx:id="equipementTFTypeClasse" disable="true" prefHeight="25.0" prefWidth="163.0" value="Block" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                                    <items>
                                                       <FXCollections fx:factory="observableArrayList">
-                                                         <String fx:value="Piece" />
                                                          <String fx:value="Block" />
-                                                      
+                                                         <String fx:value="Piece" />
                                                       </FXCollections>
                                                    </items>
                                                 </ChoiceBox>
@@ -472,7 +472,7 @@
                                                 </ImageView>
                                              </graphic>
                                           </Button>
-                                          <ImageView  fitHeight="35.0" fitWidth="41.0" layoutX="238.0" layoutY="10.0" pickOnBounds="true">
+                                          <ImageView fx:id="imageView11" fitHeight="35.0" fitWidth="41.0" layoutX="238.0" layoutY="10.0" pickOnBounds="true">
                                              <image>
                                                 <Image url="@../../assets/images/icons8_Microsoft_Excel_48px.png" />
                                              </image>
